2005-08-19 Pierrick LE GALL

	* improvement : less compact presentation of screen
	admin/element_set_unit.

2005-08-19 Pierrick LE GALL

	* improvement : standardization of categories navigation bar on
	top of administration screen element_set_(global|unit),
	cat_modify, cat_list, cat_perm.

	* new : direct link to admin/cat_modify from category.php.

2005-08-19 Pierrick LE GALL

	* modification : RSS feed work only with a given feed
	identifier. Thus we can avoid fixed frequency notification to
	concentrate on variable frequency notification, which is much more
	interesting. To do this, feeds have moved to a dedicated table
	allowing each user (including guest user) to have more than on
	feed.
	
2005-08-18 Pierrick LE GALL

	* bug 133 fixed : (report from branch 1.4) Deleting user favorites
	is too restrictive. Instead of deleting a favorite because it
	belongs to at least one forbidden category, a favorite is deleted
	if it belongs to no authorized category (which was the expected
	behaviour).

2005-08-18 Pierrick LE GALL

	* bug 134 fixed : "Nb of images incorectly rendered in "tool tip"
	near category in category menu". Correction reported (and
	improved) from branch 1.4

2005-08-18 Pierrick LE GALL

	* improvement : screen admin/picture_modify
	rewritten. Presentation copied from admin/cat_modify : fieldsets
	regroup fields. Ability to synchronize metadata for the displayed
	item.

	* bug 110 fixed : "return to element view from element edition
	fails depending on permissions". If a reachable (for the connected
	admin) category is available, a "jump to" link is displayed, by
	default, using the category given in URL.

	* bug fixed : in mass_updates function, the first item of
	$fields['update'] has not always 0 for id (as in any array).

	* modification : get_keywords function understands spaces as
	separator, allow less than 3 chars keywords, allow quotes.

	* new : ability to allow HTML in picture or category description
	(false by default)
